desafio scaffold anidado musify

--- a/app/views/playlists/_form.html.erb
+++ b/app/views/playlists/_form.html.erb
@@ -18,10 +18,8 @@
 
   <div class="field">
     <%= form.label :user_id %>
-    <%= form.select :user_id, @users_array, prompt: "Seleccione usuario" %>
+    <%= form.select :user_id, @users_array %>
   </div>
-
-
 
   <div class="actions">
     <%= form.submit %>
